renamed "effectiveness review" to "peer review"

--- a/reveal.js/s3-all-patterns-explained.html
+++ b/reveal.js/s3-all-patterns-explained.html
@@ -573,9 +573,8 @@ based on learning.</p></div>
 <li>proposal forming</li>
 <li>consent decision making</li>
 <li>role selection</li>
-<li>meeting evaluation</li>
-<li>evaluating meetings</li>
-<li>resolving objections</li>
+<li>evaluate meetings</li>
+<li>resolve objections</li>
 <li>effectiveness reviews</li>
 </ul>
 </section>
@@ -589,7 +588,7 @@ based on learning.</p></div>
 </ul>
 <p><em>Is the agreement still relevant?</em></p>
 <p><em>Is the agreement still good enough for now and safe enough to continue?</em></p>
-<p><em>Is there a reason why NOT to continue with this agreement?</em></p>
+<p><em>Is there a reason why <strong>not</strong></em> to continue with this agreement?*</p>
 </section>
 
 <section>
