--- a/reveal.js/s3-practical-guide.html
+++ b/reveal.js/s3-practical-guide.html
@@ -922,13 +922,13 @@ the whole organization to respond to organizational drivers.</p>
 
 <section>
 <h2>Pattern 5.3: Be The Change</h2>
-<p>Lead by example.</p>
+<p><strong>Lead by example.</strong></p>
 <p>Behave and act in the ways you would like others to behave and act.</p>
 </section>
 
 <section>
 <h2>Pattern 5.4: Invite Change</h2>
-<p>A way for individuals to initiate and facilitate change.</p>
+<p><strong>A way for individuals to initiate and facilitate change.</strong></p>
 <ul>
 <li>be the change you want to see</li>
 <li>use and adapt S3 patterns to address drivers when it's helpful to do so</li>
@@ -1859,170 +1859,6 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Glossary</h2>
-<p><strong>Accountability</strong>: Respond when something is needed, do what you agreed to and take ownership for the course of the organization.
-<strong>Agreement</strong>: An agreed upon guideline, process or protocol designed to guide the flow of <em>value</em>.
-<strong>Circle</strong>: An <em>equivalent</em>, <em>semi-autonomous</em> and <em>self-governing</em> group of people collaborating to respond to a <em>driver</em>.
-<strong>Concern</strong>: An opinion that doing something might impede – or miss an opportunity to improve – flow of value to an organizational <em>driver</em>.
-<strong>Consent</strong>: Do things in the absence of reasons not to.
-<strong>Continuous Improvement</strong>: Change incrementally to accommodate steady empirical learning.
-<strong>Deliverable</strong>: Something which is provided as a result of an <em>agreement</em> in response to a <em>driver</em>. <em>Deliverables</em> include products, raw materials, services, experiences and transformations.
-<strong>Doing the Work</strong> (Operations): People doing what needs to be done, guided by coordination and <em>governance</em>.
-<strong>Domain</strong>: A distinct area of influence, activity and decision making within an <em>organization</em>.
-<strong>Driver</strong>: A driver is a person’s or a group's motive for responding to a specific situation.
-<strong>Effectiveness</strong>: Devote time only to what brings you closer towards achieving your objectives.
-<strong>Empiricism</strong>: Test all assumptions through experiments, continuous revision and falsification.
-<strong>Equivalence</strong>: Involve people in making and evolving decisions that affect them.
-<strong>Governance</strong>: Continuously deciding what to do to achieve objectives, and setting constraints on how and when things will be done.
-<strong>Logbook</strong>: A (digital) system to store all information relevant for running an <em>organization</em> and its teams. 
-<strong>Objection</strong>: A reason why doing something stands in the way of (more) effective response to a <em>driver</em>.
-<strong>Peer Domain</strong>: Two peer <em>domains</em> are contained within the same immediate <em>superdomain</em>, and may be overlapping.
-<strong>Organization</strong>: A group of people collaborating towards a shared objective (<em>driver</em>).</p>
+
 </section>
 
-<section>
-<h2>Glossary (cont.)</h2>
-<p><strong>Peer Drivers</strong>: Two <em>drivers</em> existing as a direct consequence of a response to the same <em>superdriver</em>, are called peer drivers.
-<strong>Pattern</strong>: A template for successfully navigating a specific context.
-<strong>Primary Driver</strong>: The driver that defines a <em>domain</em> is called the primary driver of that domain.
-<strong>Principle</strong>: A guideline for behavior.
-<strong>Role</strong>: A set of constraints for how an individual can account for a <em>domain</em>.
-<strong>Self-Governance</strong>: People governing themselves within the constraints of a domain. 
-<strong>Self-Organization</strong>: People coordinating work within constraints defined through <em>governance</em>.
-<strong>Semi-Autonomy</strong>: People with autonomy to create <em>value</em>, limited by the constraints of their <em>domain</em>.
-<strong>Strategy</strong>: A high level approach how people will create value to successfully account for a <em>domain</em>.
-<strong>Subdomain</strong>: A domain that is fully nested within another domain.
-<strong>Subdriver</strong>: A subdriver arises as a consequence of people responding to another driver (the <em>superdriver</em>) and are necessary to address to respond to the superdriver. 
-<strong>Superdriver</strong>: see <em>subdriver</em>.
-<strong>Superdomain</strong>: A <em>domain</em> that fully contains another domain. 
-<strong>Transparency</strong>: Make all information accessible to everyone in an organization, unless there is a reason for confidentiality.
-<strong>Value</strong>: The importance, worth or usefulness of something in relation to a <em>driver</em>.
-<strong>Waste</strong>: Anything not necessary for - or standing in the way of - effective response of a <em>driver</em>.</p>
-</section>
-
-</section><section></section>			</div>
-		</div>
-
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
-
-		<script>
-			// More info https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				// The "normal" size of the presentation, aspect ratio will be preserved
-				// when the presentation is scaled to fit different resolutions. Can be
-				// specified using percentage units.
-				width: 960,
-				height: 700,
-
-				// Factor of the display size that should remain empty around the content
-				margin: 0.3,
-
-				// Bounds for smallest/largest possible scale to apply to content
-				minScale: 0.2,
-				maxScale: 1.5,
-
-			    // Display controls in the bottom right corner
-			    controls: true,
-
-			    // Display a presentation progress bar
-			    progress: true,
-
-			    // Display the page number of the current slide
-			    slideNumber: true,
-
-			    // Push each slide change to the browser history
-			    history: true,
-
-			    // Enable keyboard shortcuts for navigation
-			    keyboard: true,
-
-			    // Enable the slide overview mode
-			    overview: true,
-
-			    // Vertical centering of slides
-			    center: true,
-
-			    // Enables touch navigation on devices with touch input
-			    touch: true,
-
-			    // Loop the presentation
-			    loop: false,
-
-			    // Change the presentation direction to be RTL
-			    rtl: false,
-
-			    // Randomizes the order of slides each time the presentation loads
-			    shuffle: false,
-
-			    // Turns fragments on and off globally
-			    fragments: true,
-
-			    // Flags if the presentation is running in an embedded mode,
-			    // i.e. contained within a limited portion of the screen
-			    embedded: false,
-
-			    // Flags if we should show a help overlay when the questionmark
-			    // key is pressed
-			    help: true,
-
-			    // Flags if speaker notes should be visible to all viewers
-			    showNotes: false,
-
-			    // Number of milliseconds between automatically proceeding to the
-			    // next slide, disabled when set to 0, this value can be overwritten
-			    // by using a data-autoslide attribute on your slides
-			    autoSlide: 5000,
-
-			    // Stop auto-sliding after user input
-			    autoSlideStoppable: true,
-
-			    // Use this method for navigation when auto-sliding
-			    autoSlideMethod: Reveal.navigateNext,
-
-			    // Enable slide navigation via mouse wheel
-			    mouseWheel: true,
-
-			    // Hides the address bar on mobile devices
-			    hideAddressBar: true,
-
-			    // Opens links in an iframe preview overlay
-			    previewLinks: true,
-
-			    // Transition style
-			    transition: 'slide', // none/fade/slide/convex/concave/zoom
-
-			    // Transition speed
-			    transitionSpeed: 'default', // default/fast/slow
-
-			    // Transition style for full page slide backgrounds
-			    backgroundTransition: 'default', // none/fade/slide/convex/concave/zoom
-
-			    // Number of slides away from the current that are visible
-			    viewDistance: 3,
-
-			    // Parallax background image
-			    parallaxBackgroundImage: '', // e.g. "'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg'"
-
-			    // Parallax background size
-			    parallaxBackgroundSize: '', // CSS syntax, e.g. "2100px 900px"
-
-			    // Number of pixels to move the parallax background per slide
-			    // - Calculated automatically unless specified
-			    // - Set to 0 to disable movement along an axis
-			    parallaxBackgroundHorizontal: null,
-			    parallaxBackgroundVertical: null,
-
-				// More info https://github.com/hakimel/reveal.js#dependencies
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/search/search.js' },
-					{ src: 'plugin/zoom-js/zoom.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
-</html>
