--- a/reveal.js/s3-practical-guide.html
+++ b/reveal.js/s3-practical-guide.html
@@ -154,7 +154,7 @@
 <h2>Delegating Domains</h2>
 <p>Those delegating a domain (the <em>delegators</em>) still retain overall accountability for that domain, and often define:</p>
 <ul>
-<li><strong>key responsibilities</strong> (specifics of the work and decision making being delegated)</li>
+<li><strong>key responsibilities</strong> (essential work and decision making being delegated)</li>
 <li><strong>constraints to autonomy and influence</strong> for those the domain is delegated to, usually related to the organization itself (e.g. budget, resources, level of delegation, reporting)</li>
 </ul>
 </section>
@@ -559,9 +559,10 @@ the whole organization to respond to organizational drivers.</p>
 
 <section>
 <h2>Pattern 2.4: Development Plan</h2>
-<p><strong>An agreement supporting people to more effectively collaborate as a group or fulfill a role.</strong></p>
-<p>A development plan is passed as a proposal to the delegator to test for objections and concerns.</p>
-<p>Acting on development plans is an integral part of the strategy of people in roles, and of groups.</p>
+<p><strong>A plan for how to develop more effective ways of accounting for a domain, agreed between delegator and delegatee.</strong></p>
+<p>The development plan may relate to a person in a role, or a group (e.g. a department, circle, team or open domain).</p>
+<p>Development may happen in the form of refining description of driver and domain, amendments to strategy, new or updated agreements and specific actions to be taken, either within the domain of the delegator, or the domain of the delegatee.</p>
+<p>The development plan proposal along with recommendations for changes to the domain description and / or the driver statement is passed to the delegator to test for objections and concerns.</p>
 </section>
 
 <section>
@@ -799,14 +800,14 @@ the whole organization to respond to organizational drivers.</p>
 <section>
 <h2>Pattern 4.2: Circle</h2>
 <div class="float-left">
-<p><em>A <strong>circle</strong> is an equivalent, semi-autonomous and self-governing group of people collaborating to respond to a driver.</em></p>
+<p><em>A <strong>circle</strong> is an equivalent, self-governing, and semi-autonomous group of people collaborating to account for a domain.</em></p>
 <p>A circle:</p>
 <ul>
 <li>may be permanent or temporary</li>
 <li>may be self-organizing</li>
 <li>is accountable for its own development and its body of agreements</li>
 </ul></div>
-<div class="float-right"><img src="img/circle/circle-driver.png" /></div>
+<div class="float-right"><img src="img/circle/circle.png" /></div>
 
 </section>
 
@@ -828,18 +829,23 @@ the whole organization to respond to organizational drivers.</p>
 <section>
 <h2>Pattern 4.3: Role</h2>
 <div class="float-left">
-<p><em>A <strong>role</strong> is a set of constraints for how an individual can account for a domain.</em></p>
-<p>A <em>role keeper</em> (individual selected into a role) is autonomous to decide and act within these constraints.</p>
+<p><strong>Delegate accountability for a domain to individuals.</strong></p>
+<p>A role is an area of accountability defined by a domain and assigned to an individual (the <strong>role keeper</strong>), who has autonomy to decide and act within the constraints of the role's domain.</p>
+<p>The role keeper leads in creating strategy for how to account for their domain, evolving it in the case of objections from the delegator.</p>
+<p>A role is a simple way for a group to delegate recurring tasks or a specific area of work to one of its members.</p></div>
+<div class="float-right"><img src="img/illustrations/roles.png" /></div>
+
+</section>
+
+<section>
+<h2>Role (cont.)</h2>
 <ul>
-<li>people can be in more than one role</li>
-<li>selection is by consent and for a limited term</li>
-<li>the role keeper leads in creating strategy for how to account for their domain, and updates their strategy to resolve the delegator's objections</li>
+<li>people can be in more than one role, and roles can be fulfilled by more than one person</li>
+<li>role keepers are selected by consent and for a limited term</li>
 <li>peers support one another to develop in the roles they fulfill</li>
 </ul>
 <p>A role keeper may maintain a logbook and a governance backlog to evolve their approach towards delivering value.</p>
-<p><strong>Note</strong>: In S3, guidelines, processes or protocols created by individuals in roles are treated as agreements.  </p></div>
-<div class="float-right"><img src="img/illustrations/roles.png" /></div>
-
+<p><strong>Note</strong>: In S3, guidelines, processes or protocols created by individuals in roles are treated as agreements.  </p>
 </section>
 
 <section>
@@ -881,6 +887,57 @@ the whole organization to respond to organizational drivers.</p>
 <li>object to agreements and proposals (when there is reason to do so)</li>
 </ul>
 </li>
+</ul>
+</section>
+
+<section>
+<h2>Pattern 4.7: Helping Team</h2>
+<div class="float-left">
+<p>A group of people with the mandate to execute on a specific set of requirements defined by a delegator.</p>
+<p>A helping team: </p>
+<ul>
+<li>is a way for a delegator to expand their capacity</li>
+<li>may be self-organizing, or guided by a coordinator chosen by the delegator</li>
+<li>is governed by the delegator</li>
+<li>benefits from a clearly defined domain</li>
+</ul>
+<p>Members of the helping team:</p>
+<ul>
+<li>can object to the delegator's decisions that affect them</li>
+<li>can add items to the delegator's governance backlog</li>
+<li>may be invited to select a representative to participate in the governance decisions of the delegator</li>
+</ul></div>
+<div class="float-right"><img src="img/structural-patterns/helping-team.png" /></div>
+
+</section>
+
+<section>
+<h2>Pattern 4.8: Open Domain</h2>
+<div class="float-left">
+<p><strong>A way to intentionally account for a domain by invitation rather than assignment.</strong></p>
+<p>The delegator of the open domain clarifies:</p>
+<ul>
+<li>primary driver, key responsibilities and constraints of the open domain</li>
+<li>who is invited to contribute to the open domain</li>
+<li>constraints relating to the delegator’s participation in the open domain’s governance</li>
+</ul>
+<p>The delegator of the open domain is accountable for ensuring regular review of the open domain.</p>
+<p>Depending on the constraints set by delegators, contributors may account for work and/or governance of the open domain.</p></div>
+<div class="float-right"><img src="img/structural-patterns/open-domain.png" /></div>
+
+</section>
+
+<section>
+<h2>Pattern 4.9: Open Systems</h2>
+<p>An organization can benefit from intentionally communicating with and learning from others.</p>
+<p>Acknowledging its interdependence, an organization can consciously invite <strong>outside information, influence or skills</strong> to assist with making decisions and to support collective learning.</p>
+</section>
+
+<section>
+<h2>Open Systems (cont.)</h2>
+<ul>
+<li><strong>External experts</strong> can offer an outside perspective and bring knowledge, understanding and skills</li>
+<li><strong>Representatives of affected parties</strong> can inform and influence decision making in ways that benefit overall objectives (see Those Affected Decide)</li>
 </ul>
 </section>
 
@@ -1311,7 +1368,7 @@ the whole organization to respond to organizational drivers.</p>
 <li>go around the circle giving everyone the chance to speak</li>
 <li>begin each round with a different person, and change direction (clockwise or ccw) to bring variation to who speaks first and last, and to the order of people's contributions.</li>
 </ul>
-<p>There are a number of ways that experienced groups can fast track certain rounds.</p></div>
+<p>Experienced groups might sometimes choose to fast-track certain rounds in S3 group processes.</p></div>
 <div class="float-right"><img src="img/circle/rounds.png" /></div>
 
 </section>
@@ -1392,7 +1449,7 @@ the whole organization to respond to organizational drivers.</p>
 
 <section>
 <h2>Pattern 8.5: Governance Backlog</h2>
-<p>A <strong>governance backlog</strong> is a visible, prioritized list of items (drivers) related to governing a domain, that require attention.</p>
+<p>A <strong>governance backlog</strong> is a visible, prioritized list of items (drivers) that are related to governing a domain and require attention.</p>
 <ul>
 <li>upcoming reports</li>
 <li>decisions to make</li>
@@ -1535,11 +1592,11 @@ the whole organization to respond to organizational drivers.</p>
 
 <section>
 <h2>Pattern 9.7: Coordinator (Role)</h2>
-<p>A person in the role of a coordinator is accountable for <strong>coordinating a group's operations</strong> and is <strong>selected for a limited term.</strong></p>
+<p>A person in the role of a coordinator is accountable for <strong>coordinating a domain's operations</strong> and is <strong>selected for a limited term.</strong></p>
 <ul>
-<li>the coordinator may be selected by the group itself, or by a superset circle</li>
-<li>the coordinator role is an optional pattern for coordinating work within a domain</li>
-<li>coordinators may collaborate to synchronize work across multiple domains</li>
+<li>the coordinator may be selected by the group itself, or by the delegator</li>
+<li>several coordinators may collaborate to synchronize work across multiple domains</li>
+<li>instead of selecting a coordinator, a group may choose to self-organize</li>
 </ul>
 </section>
 
@@ -1580,28 +1637,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Pattern 10.1: Helping Team</h2>
-<div class="float-left">
-<p>A group of people with the mandate to execute on a specific set of requirements defined by a delegator.</p>
-<p>A helping team: </p>
-<ul>
-<li>is a way for a delegator to expand their capacity</li>
-<li>may be self-organizing, or guided by a coordinator chosen by the delegator</li>
-<li>is governed by the delegator</li>
-<li>benefits from a clearly defined domain</li>
-</ul>
-<p>Members of the helping team:</p>
-<ul>
-<li>can object to decisions made by the parent circle that affect them</li>
-<li>can add items to the delegator's governance backlog</li>
-<li>may be invited to select a representative to participate in the governance decisions of the delegator</li>
-</ul></div>
-<div class="float-right"><img src="img/structural-patterns/helping-team.png" /></div>
-
-</section>
-
-<section>
-<h2>Pattern 10.2: Service Circle</h2>
+<h2>Pattern 10.1: Service Circle</h2>
 <div class="float-left">
 <p><strong>Outsource services required by two or more domains.</strong></p>
 <p>A service circle can be populated by members of the domains it serves, and/or by other people too.</p></div>
@@ -1610,7 +1646,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Pattern 10.3: Delegate Circle</h2>
+<h2>Pattern 10.2: Delegate Circle</h2>
 <div class="float-left">
 <p><strong>Decide and align on how to address drivers affecting multiple domains.</strong></p>
 <p>Decisions of a delegate circle are acted upon in the various domains it serves.</p>
@@ -1621,7 +1657,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Pattern 10.4: Peach Organization</h2>
+<h2>Pattern 10.3: Peach Organization</h2>
 <div class="float-left">
 <p>Deliver value in complex and competitive environments through <strong>decentralization</strong> (of resources and influence) and <strong>direct interaction</strong> between those creating value and the customers they serve.</p>
 <ul>
@@ -1635,7 +1671,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Pattern 10.5: Double-Linked Hierarchy</h2>
+<h2>Pattern 10.4: Double-Linked Hierarchy</h2>
 <div class="float-left">
 <p><strong>Bring equivalence to governance in a typical organizational hierarchy.</strong></p>
 <ul>
@@ -1648,21 +1684,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Pattern 10.6: Open Systems</h2>
-<p>An organization (or it's various sub-domains) can benefit from intentionally communicating with and learning from others.</p>
-<p>An organization is an interdependent system that benefits from consciously inviting <strong>information and influence</strong> from people who can assist with making decisions and experimenting to learn.</p>
-</section>
-
-<section>
-<h2>Open Systems (cont.)</h2>
-<ul>
-<li><strong>External experts</strong> can offer an outside perspective and bring knowledge, understanding and skills</li>
-<li><strong>Representatives of affected parties</strong> can inform and influence decision making in ways that benefit overall objectives (see Those Affected Decide)</li>
-</ul>
-</section>
-
-<section>
-<h2>Pattern 10.7: Service Organization</h2>
+<h2>Pattern 10.5: Service Organization</h2>
 <div class="float-left">
 <p><strong>Multi-stakeholder collaboration and alignment towards a shared driver.</strong> </p>
 <ul>
@@ -1677,7 +1699,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Pattern 10.8: Fractal Organization</h2>
+<h2>Pattern 10.6: Fractal Organization</h2>
 <div class="float-left">
 <p>A pattern for multiple organizations (or domains) with a common driver to share learning and if valuable, coordinate and align action.</p>
 <ul>
@@ -1685,22 +1707,6 @@ the whole organization to respond to organizational drivers.</p>
 <li>a structure to facilitate innovation and exchange of learning throughout a large community on an 'as needed' basis</li>
 </ul></div>
 <div class="float-right"><img src="img/structural-patterns/fractal-organization.png" /></div>
-
-</section>
-
-<section>
-<h2>Pattern 10.9: Open Domain</h2>
-<div class="float-left">
-<p><strong>A way to intentionally account for a domain by invitation rather than assignment.</strong></p>
-<p>The delegator of the open domain clarifies:</p>
-<ul>
-<li>primary driver, key responsibilities and constraints of the open domain</li>
-<li>who is invited to contribute to the open domain</li>
-<li>constraints relating to the delegator’s participation in the open domain’s governance</li>
-</ul>
-<p>The delegator of the open domain is accountable for ensuring regular review of the open domain.</p>
-<p>Depending on the constraints set by delegators, contributors may account for work and/or governance of the open domain.</p></div>
-<div class="float-right"><img src="img/structural-patterns/open-domain.png" /></div>
 
 </section>
 
@@ -1713,6 +1719,18 @@ the whole organization to respond to organizational drivers.</p>
 <li>Authors</li>
 <li>Glossary</li>
 <li>Pattern Index</li>
+</ul>
+</section>
+
+<section>
+<h2>Changelog 2017-11-10</h2>
+<ul>
+<li>various small clarifications and corrections</li>
+<li><em>Circle</em>: clarified relationship between circle and domain</li>
+<li><em>Role</em>: clarified description</li>
+<li><em>Rounds</em>: updated description</li>
+<li>moved <em>Open Domain</em>, <em>Helping Team</em> and <em>Open Systems</em> to category "Building Organizations"</li>
+<li>added several terms to the glossary</li>
 </ul>
 </section>
 
