updated config and file structure to latest version of mdslides

--- a/reveal.js/s3-practical-guide.html
+++ b/reveal.js/s3-practical-guide.html
@@ -1896,7 +1896,7 @@ the whole organization to respond to organizational drivers.</p>
 <p><strong>Subdriver</strong>: A subdriver arises as a consequence of people responding to another driver (the superdriver) and is necessary to address to respond to the superdriver. <strong>Superdomain</strong>: A domain that fully contains another domain. <strong>Superdriver</strong>: see subdriver. <strong>Transparency</strong>: Make all information accessible to everyone in an organization, unless there is a reason for confidentiality. <strong>Value</strong>: The importance, worth or usefulness of something in relation to a driver. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values"). <strong>Values</strong>: A set of principles of some significance that guides behavior. Not to be confused with "value" (singular) in the context of a driver. <strong>Waste</strong>: Anything not necessary for - or standing in the way of - effective response of a driver. <strong>backlog</strong>: A visible list of (often prioritized) uncompleted work items (drivers) that need to be addressed. </p>
 </section>
 
-</section><section></section>			</div>
+</section>			</div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
