--- a/reveal.js/s3-practical-guide.html
+++ b/reveal.js/s3-practical-guide.html
@@ -1723,6 +1723,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
+<h1>Changelog</h1>
 <h2>Changelog 2017-11-16</h2>
 <ul>
 <li>small corrections</li>
@@ -1787,7 +1788,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog (2017-10-21 cont.)</h2>
+<h2>Changelog 2017-10-21 (cont.)</h2>
 <ul>
 <li><em>Evaluate Agreements</em>: aligned questions to peer review</li>
 <li><em>Governance Backlog</em>: updated definition</li>
@@ -1802,7 +1803,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog (2017-10-21 cont.)</h2>
+<h2>Changelog 2017-10-21 (cont.)</h2>
 <p><strong>Renamed Patterns:</strong> </p>
 <ul>
 <li><em>Backbone Organization</em> to <em>Service Organization</em></li>
