new build (including printable version)

--- a/reveal.js/s3-practical-guide.html
+++ b/reveal.js/s3-practical-guide.html
@@ -35,7 +35,7 @@
 </section>
 
 </section><section><section>
-<h1>Sociocracy 3.0 - A Practical Guide For Evolving Agile and Resilient Organizations</h1>
+<h2>Sociocracy 3.0 - A Practical Guide For Evolving Agile and Resilient Organizations</h2>
 <h3>Effective Collaboration At Any Scale</h3>
 <ul>
 <li><strong>principles-based</strong>: A coherent way for growing organizational integrity and developing a sociocractic and agile mindset</li>
@@ -270,23 +270,85 @@
 </section>
 
 <section>
-<h2>Pattern 1.3: Describe Drivers</h2>
-<p><strong>Describe drivers to understand, communicate and remember them.</strong></p>
-<p>A simple way to describe a driver is with a statement containing: </p>
+<h1>Pattern 1.3: Describe Organizational Drivers</h1>
+<p><strong>Describe organizational drivers to understand, communicate and remember them.</strong></p>
+<p>A simple way to describe a driver is with a <strong>brief statement</strong> explaining: </p>
 <ul>
-<li>a brief description of the situation (observation) </li>
-<li>a description of what is needed (deficit) in relation to the situation </li>
+<li><strong>What’s happening..:</strong><ul>
+<li>the <strong>current situation</strong></li>
+<li>the <strong>effect</strong> of this situation on the organization</li>
 </ul>
-<p>When there’s disagreement about what is needed, it’s helpful to zoom out from specific solutions.</p>
+</li>
+<li>...and <strong>what’s needed:</strong><ul>
+<li>the <strong>need</strong> of the organization in relation to this situation</li>
+<li>the <strong>impact</strong> of attending to that need</li>
+</ul>
+</li>
+</ul>
 </section>
 
 <section>
+<h1>Describe Organizational Drivers (2)</h1>
+<p>Depending on their perspective, a person or group may decide to describe a driver as a problem to solve or an opportunity to leverage. </p>
+<p>A <strong>driver statement</strong> captures just enough information to communicate the need for an action or a decision. More information about the scope and details of the driver may be recorded besides the initial driver statement. </p>
+</section>
+
+<section>
+<h2>Example driver statement:</h2>
 <blockquote>
-<p>Driver statement example: </p>
-<p><em>“The kitchen is a mess: there are no clean cups, the sink is full of dishes and it’s not possible to quickly grab a coffee and get right back to work. We need to figure out how we can keep the kitchen in a usable state.”</em></p>
+<p><em>“The kitchen is a mess: there are no clean cups, the sink is full of dishes and it’s not possible to quickly grab a coffee and get right back to work. We need the kitchen in a usable state so we can stay focussed on our work.”</em></p>
 </blockquote>
-<p>The <strong>driver statement</strong> captures just enough information to communicate the need for an action or a decision. More information to reveal scope and details of the driver can be recorded in an appendix. </p>
-<p>A driver can be described as a problem or an opportunity, depending on the perspective of the person or the group. </p>
+</section>
+
+<section>
+<h2>1. Current Situation</h2>
+<blockquote>
+<p><em>“The kitchen is a mess: there are no clean cups, the sink is full of dishes...”</em></p>
+</blockquote>
+<p>Describe the current situation:</p>
+<ul>
+<li>Briefly capture the essentials of what is happening.</li>
+<li>Be objective: Describe observations and avoid evaluation.</li>
+</ul>
+</section>
+
+<section>
+<h2>2. Effect</h2>
+<blockquote>
+<p><em>“...it’s not possible to quickly grab a coffee and get right back to work.”</em></p>
+</blockquote>
+<p>Explain the effect of this situation on the organization:</p>
+<ul>
+<li>Clarify <strong>why</strong> the situation needs attention: how does it affect the organization? </li>
+<li>Be explicit about effects being current or anticipated. </li>
+<li>Explain challenges, losses, opportunities or gains. </li>
+</ul>
+</section>
+
+<section>
+<h2>3. Need</h2>
+<blockquote>
+<p><em>“We need the kitchen in a usable state...”</em></p>
+</blockquote>
+<p>Explain the need of the organization in relation to this situation:</p>
+<ul>
+<li>A <strong>need of an organization</strong> is anything a group (or individual) needs to effectively account for a domain. </li>
+<li>When there’s disagreement about the need(s), it’s helpful to zoom out from specific solutions.</li>
+<li>Be specific on whose need it is (“we need”, “they need”, “I need”) .</li>
+<li>Avoid describing specific solutions disguised as needs.</li>
+</ul>
+</section>
+
+<section>
+<h2>4. Impact</h2>
+<blockquote>
+<p><em>“...so we can stay focussed on our work”.</em></p>
+</blockquote>
+<p>Describe the impact of attending to that need:</p>
+<ul>
+<li>Explain intended outcome, potential benefits or opportunities.</li>
+<li>The impact may be obvious or implicit, especially when the effects of the current situation are already described.</li>
+</ul>
 </section>
 
 <section>
@@ -1723,8 +1785,14 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h1>Changelog</h1>
-<h2>Changelog 2017-11-16</h2>
+<h2>Changelog</h2>
+<h3>Changes 2018-03-21</h3>
+<ul>
+<li>renamed pattern  <em>Describe Drivers</em> to <em>Describe Organizational Drivers</em></li>
+<li><em>Describe Organizational Drivers</em>: explained four aspects of a driver: current situation, effect of the situation on the organization, need of the organization in relation to this situation, and impact of attending to need</li>
+<li>added <em>need</em> to glossary</li>
+</ul>
+<h3>Changes 2017-11-16</h3>
 <ul>
 <li>small corrections</li>
 <li>aligned glossary entries for <em>Circle</em> and <em>Role</em> to pattern text</li>
@@ -1734,7 +1802,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog 2017-11-10</h2>
+<h3>Changes 2017-11-10</h3>
 <ul>
 <li>various small clarifications and corrections</li>
 <li><em>Circle</em>: clarified relationship between circle and domain</li>
@@ -1746,7 +1814,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog 2017-10-21</h2>
+<h3>Changes 2017-10-21</h3>
 <ul>
 <li>added Liliana David to authors</li>
 <li>dropped the term "framework" (replaced with "practical guide")</li>
@@ -1760,7 +1828,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog 2017-10-21 (cont.)</h2>
+<h3>Changes 2017-10-21 (cont.)</h3>
 <ul>
 <li>Introduction:<ul>
 <li>added "what's in it for me?"</li>
@@ -1774,7 +1842,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog 2017-10-21 (cont.)</h2>
+<h3>Changes 2017-10-21 (cont.)</h3>
 <ul>
 <li><em>Artful Participation</em>: refined description</li>
 <li><em>Agreement</em>: clarified that the concept of agreements is applicable to people in roles</li>
@@ -1788,7 +1856,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog 2017-10-21 (cont.)</h2>
+<h3>Changes 2017-10-21 (cont.)</h3>
 <ul>
 <li><em>Evaluate Agreements</em>: aligned questions to peer review</li>
 <li><em>Governance Backlog</em>: updated definition</li>
@@ -1803,7 +1871,7 @@ the whole organization to respond to organizational drivers.</p>
 </section>
 
 <section>
-<h2>Changelog 2017-10-21 (cont.)</h2>
+<h3>Changes 2017-10-21 (cont.)</h3>
 <p><strong>Renamed Patterns:</strong> </p>
 <ul>
 <li><em>Backbone Organization</em> to <em>Service Organization</em></li>
@@ -1812,20 +1880,22 @@ the whole organization to respond to organizational drivers.</p>
 <li><em>Domain Description</em> to <em>Clarify Domains</em></li>
 <li><em>Describing Deliverables</em> to <em>Describe Deliverables</em></li>
 </ul>
-<table>
-<thead>
-<tr>
-<th>added</th>
-<th>removed</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><em>Describe Drivers</em><br/><em>Open Domain</em><br/><em>Delegate Influence</em><br/></td>
-<td><em>Coordination Circle</em><br/><em>Nested Domains</em><br/><em>Qualify Driver</em><br/></td>
-</tr>
-</tbody>
-</table>
+</section>
+
+<section>
+<h3>Changes 2017-10-21 (cont.)</h3>
+<p><strong>Added Patterns:</strong></p>
+<ul>
+<li><em>Delegate Influence</em></li>
+<li><em>Describe Drivers</em></li>
+<li><em>Open Domain</em></li>
+</ul>
+<p><strong>Removed Patterns</strong></p>
+<ul>
+<li><em>Coordination Circle</em></li>
+<li><em>Nested Domains</em></li>
+<li><em>Qualify Driver</em></li>
+</ul>
 </section>
 
 <section data-background-image="img/framework/logo.png">
@@ -1898,13 +1968,16 @@ the whole organization to respond to organizational drivers.</p>
 <p><strong>Driver</strong>: A person’s or a group's motive for responding to a specific situation. <strong>Effectiveness</strong>: Devote time only to what brings you closer towards achieving your objectives. <strong>Empiricism</strong>: Test all assumptions through experiments, continuous revision and falsification. <strong>Equivalence</strong>: Involve people in making and evolving decisions that affect them. <strong>Governance</strong>: Continuously deciding what to do to achieve objectives, and setting constraints on how and when things will be done. <strong>Governance Backlog</strong>: A visible, prioritized list of items (drivers) that are related to governing a domain and require attention. <strong>Key responsibilities</strong>: Essential work and decision making required in the context of a domain. <strong>Logbook</strong>: A (digital) system to store all information relevant for running an organization and its teams. </p>
 <p></section><section></p>
 <h1>Glossary (cont.)</h1>
-<p><strong>Objection</strong>: A reason why doing something stands in the way of (more) effective response to a driver. <strong>Operations (Doing the Work)</strong>: People doing what needs to be done, guided by coordination and governance. <strong>Organization</strong>: A group of people collaborating towards a shared objective (driver). <strong>Organizational Driver</strong>: A driver that is (directly or indirectly) related to an organization's primary driver. <strong>Pattern</strong>: A template for successfully navigating a specific context. <strong>Peer Domain</strong>: Two peer domains are contained within the same immediate superdomain, and may be overlapping. <strong>Peer Drivers</strong>: Two drivers existing as a direct consequence of a response to the same superdriver, are called peer drivers. <strong>Primary Driver</strong>: The driver that defines a domain is called the primary driver of that domain. </p>
+<p><strong>Need</strong>: A need is a lack of something wanted or deemed necessary. <strong>Objection</strong>: A reason why doing something stands in the way of (more) effective response to a driver. <strong>Operations (Doing the Work)</strong>: People doing what needs to be done, guided by coordination and governance. <strong>Organization</strong>: A group of people collaborating towards a shared objective (driver). <strong>Organizational Driver</strong>: A driver that is (directly or indirectly) related to an organization's primary driver. <strong>Pattern</strong>: A template for successfully navigating a specific context. <strong>Peer Domain</strong>: Two peer domains are contained within the same immediate superdomain, and may be overlapping. <strong>Peer Drivers</strong>: Two drivers existing as a direct consequence of a response to the same superdriver, are called peer drivers. </p>
 <p></section><section></p>
 <h1>Glossary (cont.)</h1>
-<p><strong>Principle</strong>: A basic idea or rule that explains or controls how something happens or works. <strong>Role</strong>: An area of accountability defined by a domain and assigned to an individual. <strong>SCM</strong>: (the Sociocratic Circle-Organisation Method) An egalitarian governance method for organizations based on a sociocratic mindset, developed in the Netherlands by Gerard Endenburg. <strong>Self-Governance</strong>: People governing themselves within the constraints of a domain. <strong>Self-Organization</strong>: People coordinating work within constraints defined through governance. <strong>Semi-Autonomy</strong>: People with autonomy to create value, limited by the constraints of their domain. <strong>Sociocracy</strong>: A mindset where people affected by decisions can influence them on the basis of reasons to do so. <strong>Strategy</strong>: A high level approach how people will create value to successfully account for a domain. </p>
+<p><strong>Primary Driver</strong>: The driver that defines a domain is called the primary driver of that domain. <strong>Principle</strong>: A basic idea or rule that explains or controls how something happens or works. <strong>Role</strong>: An area of accountability defined by a domain and assigned to an individual. <strong>SCM</strong>: (the Sociocratic Circle-Organisation Method) An egalitarian governance method for organizations based on a sociocratic mindset, developed in the Netherlands by Gerard Endenburg. <strong>Self-Governance</strong>: People governing themselves within the constraints of a domain. <strong>Self-Organization</strong>: People coordinating work within constraints defined through governance. <strong>Semi-Autonomy</strong>: People with autonomy to create value, limited by the constraints of their domain. <strong>Sociocracy</strong>: A mindset where people affected by decisions can influence them on the basis of reasons to do so. </p>
 <p></section><section></p>
 <h1>Glossary (cont.)</h1>
-<p><strong>Subdomain</strong>: A domain that is fully contained in another domain. <strong>Subdriver</strong>: A subdriver arises as a consequence of people responding to another driver (the superdriver) and is necessary to address to respond to the superdriver. <strong>Superdomain</strong>: A domain that fully contains another domain. <strong>Superdriver</strong>: see subdriver. <strong>Transparency</strong>: Make all information accessible to everyone in an organization, unless there is a reason for confidentiality. <strong>Value</strong>: The importance, worth or usefulness of something in relation to a driver. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values"). <strong>Values</strong>: A set of principles of some significance that guides behavior. Not to be confused with "value" (singular) in the context of a driver. <strong>Waste</strong>: Anything not necessary for - or standing in the way of - effective response of a driver. </p>
+<p><strong>Strategy</strong>: A high level approach how people will create value to successfully account for a domain. <strong>Subdomain</strong>: A domain that is fully contained in another domain. <strong>Subdriver</strong>: A subdriver arises as a consequence of people responding to another driver (the superdriver) and is necessary to address to respond to the superdriver. <strong>Superdomain</strong>: A domain that fully contains another domain. <strong>Superdriver</strong>: see subdriver. <strong>Transparency</strong>: Make all information accessible to everyone in an organization, unless there is a reason for confidentiality. <strong>Value</strong>: The importance, worth or usefulness of something in relation to a driver. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values"). <strong>Values</strong>: A set of principles of some significance that guides behavior. Not to be confused with "value" (singular) in the context of a driver. </p>
+<p></section><section></p>
+<h1>Glossary (cont.)</h1>
+<p><strong>Waste</strong>: Anything not necessary for - or standing in the way of - effective response of a driver. </p>
 </section>
 
 </section>			</div>
