--- a/reveal.js/s3-practical-guide.html
+++ b/reveal.js/s3-practical-guide.html
@@ -1792,6 +1792,9 @@ the whole organization to respond to organizational drivers.</p>
 <li><em>Describe Organizational Drivers</em>: explained four aspects of a driver: current situation, effect of the situation on the organization, need of the organization in relation to this situation, and impact of attending to need</li>
 <li>added <em>need</em> to glossary</li>
 </ul>
+</section>
+
+<section>
 <h3>Changes 2017-11-16</h3>
 <ul>
 <li>small corrections</li>
