homepage is now html due to crowdin problems

--- a/content/website/_templates/index.html
+++ b/content/website/_templates/index.html
@@ -1,8 +1,8 @@
-# The Official Description of Sociocracy 3.0 (Online Version)
+<h1>The Official Description of Sociocracy 3.0 (Online Version)</h1>
 
 <p class="hp-version">${version}</p>
 
-<div class="homepage-box hp-box1">
+<div class="homepage-box hp-box-green">
     <h2> If you're new to S3…</h2>
 
     <p>Start with <a href="what-is-s3.html">&#9654;&nbsp;What is Sociocracy 3.0</a>, which explains what S3 is all about, and what it can bring to your organization or team.</p>
@@ -12,7 +12,7 @@
     <p>At the bottom of each page, you will find a <strong>guided tour</strong> through this book, all you need to do to read it cover-to-cover is follow those links.</p>
 </div>
 
-<div class="homepage-box hp-box2">
+<div class="homepage-box hp-box-blue">
     <h2>If you already know S3…</h2>
 
     <p>To see what has changed in the Practical Guide, take a look at the <a href="changelog.html">&#9654; Changelog</a>.</p>
@@ -22,7 +22,7 @@
     <p>These tools are also available in the "Quick Links" menu.</p>
 </div>
 
-<div class="homepage-box hp-box3">
+<div class="homepage-box hp-box-purple">
     <h2>Downloads and other languages</h2>
 
     <p>You can read this guide in <a href="https://patterns-de.sociocracy30.org">German</a>, <a href="https://patterns-fr.sociocracy30.org">French</a>, <a href="https://patterns-nl.sociocracy30.org">Dutch</a>, or <a href="https://patterns-he.sociocracy30.org">Hebrew</a>. Each page has links to other language versions of that page in the <strong>footer</strong>.</p>
@@ -30,7 +30,7 @@
     <p>If you prefer to read this guide offline or on your ebook reader, you can find <strong>downloads as PDF and EPUB</strong> in the <a href="https://sociocracy30.org/resources/#se-practical-guide">&#9654;&nbsp;S3&nbsp;Resources Page</a> in all available languages.</p>
 </div>
 
-<div class="homepage-box hp-box4">
+<div class="homepage-box hp-box-grey">
     <h2>Keyboard Shortcuts</h2>
 
     <p>For those of you who use the Practical Guide in their daily work, we added some keyboard shortcuts to make your life a little easier.</p>
@@ -53,7 +53,7 @@
 
 <p>For further information about Sociocracy 3.0 and more free resources check out <a href="http://sociocracy30.org">http://sociocracy30.org</a></p>
 
-[&#9654; read next: What is Sociocracy 3.0](what-is-s3.html)
+<p><a href="what-is-s3.html">&#9654; read next: What is Sociocracy 3.0</a></p>
 
 <script type="text/javascript">
   Mousetrap.bind('g n', function() {
