--- a/content/website/_templates/index.html
+++ b/content/website/_templates/index.html
@@ -37,7 +37,7 @@
 
     <p><strong>Shift + m</strong> will open the <strong>m</strong>enu, which you can then navigate with the arrow keys, and select an item with &lt;space&lt; or &lt;enter&lt;</p>
 
-    <p>The following commants will take you to specific pages, for all of those you will have to type 'g' (for 'Go'), followed by another letter:</p>
+    <p>The following commands will take you to specific pages, for all of those you will have to type 'g' (for 'Go'), followed by another letter:</p>
 
     <ul>
         <li><em>g n</em> – <strong>G</strong>o to the <strong>N</strong>ext page in the book</li>
