--- a/content/website/_templates/index.html
+++ b/content/website/_templates/index.html
@@ -21,7 +21,7 @@
 
       <p class="card-text">To see what has changed in the Practical Guide, take a look at the <a href="changelog.html">&#9654; Changelog</a>.</p>
 
-      <p class="card-text"><strong>To find a specific pattern</strong>, or to get an overview over what's available, you can use the <a href="pattern-index.html">&#9654;&nbsp;Pattern Index</a> or the <a href="map.html" ><img src="img/map.png" />&nbsp;Pattern Map</a>.</p>
+      <p class="card-text"><strong>To find a specific pattern</strong>, or to get an overview over what's available, you can use the <a href="pattern-index.html">Pattern Index</a> or the <a href="{{'map.html' | relative_url }}">Pattern Map</a>, available as icons on the top of the page.</p>
 
       <p class="card-text">These tools are also available in the "Quick Links" menu.</p>
     </div>
