fixed links on home page

--- a/content/website/_templates/index.html
+++ b/content/website/_templates/index.html
@@ -7,9 +7,9 @@
     <div class="card-body">
       <h5 class="card-title">If you're new to S3…</h5>
 
-      <p class="card-text">Start with <a href="what-is-s3.html">&#9654;&nbsp;What is Sociocracy 3.0</a>, which explains what S3 is all about, and what it can bring to your organization or team.</p>
+      <p class="card-text">Start with <a href="\{\{ '/what-is-s3.html' | relative_url \}\}">&#9654;&nbsp;What is Sociocracy 3.0</a>, which explains what S3 is all about, and what it can bring to your organization or team.</p>
 
-      <p class="card-text">Refer to the <a href="glossary.html">&#9654;&nbsp;Glossary</a> for terms you are not familiar with.</p>
+      <p class="card-text">Refer to the <a href="\{\{ '/glossary.html' | relative_url \}\}">&#9654;&nbsp;Glossary</a> for terms you are not familiar with.</p>
 
       <p class="card-text">At the bottom of each page, you will find a <strong>guided tour</strong> through this book, all you need to do to read it cover-to-cover is follow those links.</p>
     </div>
@@ -19,9 +19,9 @@
     <div class="card-body">
       <h5 class="card-title">If you already know S3…</h5>
 
-      <p class="card-text">To see what has changed in the Practical Guide, take a look at the <a href="changelog.html">&#9654; Changelog</a>.</p>
+      <p class="card-text">To see what has changed in the Practical Guide, take a look at the <a href="\{\{'/changelog.html' | relative_url \}\}">&#9654; Changelog</a>.</p>
 
-      <p class="card-text"><strong>To find a specific pattern</strong>, or to get an overview over what's available, you can use the <a href="pattern-index.html">Pattern Index</a> or the <a href="{{'map.html' | relative_url }}">Pattern Map</a>, available as icons on the top of the page.</p>
+      <p class="card-text"><strong>To find a specific pattern</strong>, or to get an overview over what's available, you can use the <a href="\{\{ '/pattern-index.html' | relative_url \}\}"><img src="/icons/list-ul.svg" class="icon" alt="pattern index"/> &nbsp;Pattern Index</a> or the <a href="\{\{'/map.html' | relative_url \}\}"><img src="/icons/map.svg" class="icon" alt="pattern map" />&nbsp;Pattern Map</a>, available as icons on the top of the page.</p>
 
       <p class="card-text">These tools are also available in the "Quick Links" menu.</p>
     </div>
